create home page

--- a/apps/home-page/src/lib/home-page/home-page.html
+++ b/apps/home-page/src/lib/home-page/home-page.html
@@ -1,1 +1,15 @@
-<p>HomePage works!</p>
+<div class="welcome-container">
+  <div class="welcome-card">
+    <h1>ברוך הבא לאפליקציית House-Plan!</h1>
+    <p>
+      התחל לעצב את הבית החלומי שלך בקלות וביעילות.
+      <br />
+      כאן תוכל לנהל את הפרויקטים שלך ולבנות תוכניות מפורטות.
+    </p>
+  </div>
+</div>
+
+<button class="fab" (click)="createNewProject()">
+  <span class="material-icons">add</span>
+  <span>ליצירת פרויקט חדש</span>
+</button>
